--- a/form.html
+++ b/form.html
@@ -8,9 +8,9 @@
 <h1>Here is the Form</h1>
 <form>
   user:<br>
-  <input type="text" name="username"><br>
+  <input type="text" name="user"><br>
   password:<br>
-  <input type="password" name="passname">
+  <input type="password" name="password">
   
   <br>
   
