--- a/form.html
+++ b/form.html
@@ -18,7 +18,7 @@
   <input type="radio" name="sibling" value="2"> 2<br>
   <input type="radio" name="sibling" value="3"> 3 <br>
   <input type="radio" name="sibling" value="4+"> 4+ <br>
-  <select>
+  <select name="transportation">
   <option value="bus">Bus</option>
   <option value="bicycle">Bicycle</option>
   <option value="car">Car</option>
