--- a/form.html
+++ b/form.html
@@ -8,7 +8,7 @@
   
   <br>
   
-  <input type="radio" name="sibling" value="1" checked> 1<br>
+  <input type="radio" name="sibling" value="1"> 1<br>
   <input type="radio" name="sibling" value="2"> 2<br>
   <input type="radio" name="sibling" value="3"> 3 <br>
   <input type="radio" name="sibling" value="4+"> 4+ <br>
