--- a/form.html
+++ b/form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<form>
+<form name="form">
   
   <input type="text" name="user"><br>
   <input type="password" name="password">
