--- a/form.html
+++ b/form.html
@@ -3,7 +3,7 @@
 
 <form name="form">
   
-  <input type="text" name="user"><br>
+  <input name="user" type="text"><br>
   <input type="password" name="password">
   
   <br>
