--- a/form.html
+++ b/form.html
@@ -21,7 +21,7 @@
 </select>
 <br>
    <input type="checkbox" name="done" value="yes"> Done<br>
-   <input type="submit" value="Submit">
+   <button type="submit" value="Submit">SUBMIT</button>
 </form>
 
 </html>
