--- a/form.html
+++ b/form.html
@@ -8,10 +8,10 @@
   
   <br>
   
-  <input type="radio" name="sibling" value="1"> 1<br>
-  <input type="radio" name="sibling" value="2"> 2<br>
-  <input type="radio" name="sibling" value="3"> 3 <br>
-  <input type="radio" name="sibling" value="4+"> 4+ <br>
+  <input type="radio" name="siblings" value="1"> 1<br>
+  <input type="radio" name="siblings" value="2"> 2<br>
+  <input type="radio" name="siblings" value="3"> 3 <br>
+  <input type="radio" name="siblings" value="4+"> 4+ <br>
   <select name="transportation">
   <option value="bus">Bus</option>
   <option value="bicycle">Bicycle</option>
